--- a/typeclassopedia/typeclassopedia.org
+++ b/typeclassopedia/typeclassopedia.org
@@ -1,5 +1,7 @@
 #+TITLE: The Typeclassopedia - A summary
 #+OPTIONS: H:1 num:f toc:t \n:nil @:t ::t |:t
+#+STYLE:  <link rel="stylesheet" type="text/css" href="style.css" />
+#+org-export-html-style-include-default: nil
 This is a summary of Brent Yorgey's excellent article "The
 Typeclassopedia", originally published in issue [[http://www.haskell.org/wikiupload/8/85/TMR-Issue13.pdf][#13]] of "[[http://themonadreader.wordpress.com/][The Monad Reader]]".
 
@@ -247,4 +249,3 @@ Typeclassopedia", originally published in issue [[http://www.haskell.org/wikiupl
 ** =duplicate= is the dual of =join= (adds layer of monadic wrapping)
 ** =extend= is the dual of ~(>>=)~ with arguments in different order
 ** can be defined by =fmap=, =extract= and *either* =duplicate= or =extend=
-
