--- a/typeclassopedia/typeclassopedia.org
+++ b/typeclassopedia/typeclassopedia.org
@@ -1,9 +1,14 @@
 #+TITLE: The Typeclassopedia - A summary
 #+OPTIONS: H:1 num:f toc:t \n:nil @:t ::t |:t
-#+STYLE:  <link rel="stylesheet" type="text/css" href="style.css" />
+#+STYLE:  <link rel="stylesheet" type="text/css" href="style/style.css" />
 #+org-export-html-style-include-default: nil
 This is a summary of Brent Yorgey's excellent article "The
 Typeclassopedia", originally published in issue [[http://www.haskell.org/wikiupload/8/85/TMR-Issue13.pdf][#13]] of "[[http://themonadreader.wordpress.com/][The Monad Reader]]".
+
+#+BEGIN_HTML
+<p><a href="http://flattr.com/thing/350548/The-Typeclassopedia-A-summary" target="_blank">
+<img src="http://api.flattr.com/button/flattr-badge-large.png" alt="Flattr this" title="Flattr this" border="0" /></a></p>
+#+END_HTML
 
 * Functor
 ** "container" with ability to apply a function to every element
