--- a/c64/c64.org
+++ b/c64/c64.org
@@ -1,6 +1,6 @@
 #+TITLE: Commodore 64 Hacking
 #+OPTIONS: H:1 num:f toc:t \n:nil @:t ::t |:t
-#+STYLE:  <link rel="stylesheet" type="text/css" href="../style/style.css" />
+#+STYLE:  <link rel="stylesheet" type="text/css" href="style.css" />
 #+org-export-html-style-include-default: nil
 Various bits and pieces of C=64 related hacking info.
 
