--- a/ruby-performance/ruby-performance.org
+++ b/ruby-performance/ruby-performance.org
@@ -1,6 +1,7 @@
 #+title: Debugging Ruby Performance
 #+author: Michael Kohl
 #+OPTIONS: H:1 num:f toc:t \n:nil @:t ::t |:t
+#+STYLE:  <link rel="stylesheet" type="text/css" href="style.css" />
 #+org-export-html-style-include-default: nil
 
 Aman Gupta at Frozen Rails 2011, 2011-09-21
@@ -35,4 +36,3 @@ Aman Gupta at Frozen Rails 2011, 2011-09-21
 ** http://memprof.com
 * graphite - time series analytics
 ** http://graphite.wikidot.com/
-
